# ml-systems-lab

./: .gitignore  README.md  api.py  auto_ai.py  makefile  pyproject.toml
src/ml_systems_lab/: config.py
src/ml_systems_lab/assets/: data_ref.py
src/ml_systems_lab/orchestrators/: automation_job.py
src/ml_systems_lab/routes/: upload_file.py  upload_folder.py
src/ml_systems_lab/stages/file_layout_id/: file_layout_id.py  file_layout_spec.py  invalid_files_error.py  unsupported_layout_error.py
